tests/NormalTests/paczka1/small_fuzzy/14434294.err
Error in line 3: OAYoB2ehDev S147 92,4
Error in line 1: 8yufc8rIIU6 S55 50,0
Error in line 4: A281 S55 33,4
Error in line 9: 8yufc8rIIU6 A476 52,6
